--- a/zikky/templates/register.html
+++ b/zikky/templates/register.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/gbogs.css' %}">
     <title>Registeration</title>
 </head>
-<body>
+<body class="register">
     <form action="register" method="post">
         {% csrf_token %}
 
