--- a/tinuke/static/css/gbogs.css
+++ b/tinuke/static/css/gbogs.css
@@ -21,6 +21,14 @@ li{
     top: 200px;
     border-radius: 15px;
 }
+input{
+    height: 38px;
+    width: 280px;
+    padding: 10px;
+    margin: 7px;
+    border-radius: 10px;
+    border: none;
+}
 .register{
     background-color: red;
     color: #fff;
