--- a/tinuke/static/css/gbogs.css
+++ b/tinuke/static/css/gbogs.css
@@ -14,20 +14,25 @@ li{
     color: #fff;
 }
 .fola{
-    background-color: aqua;
-    color: red;
+    background-color: red;
+    color: #fff;
 }
 .fola1{
-    top: 200px;
+    height: 20px;
     border-radius: 15px;
 }
 input{
+    position: relative;
+    top: 100px;
     height: 38px;
     width: 280px;
     padding: 10px;
     margin: 7px;
     border-radius: 10px;
     border: none;
+}
+#one{
+    text-align: center;
 }
 .register{
     background-color: red;
