--- a/zikky/templates/login.html
+++ b/zikky/templates/login.html
@@ -8,16 +8,20 @@
     <title>login</title>
 </head>
 <body class="fola">
-    <form action="login" method="post" class="fola1"> 
+    <form action="login" method="post"> 
         {% csrf_token %}
+        <div class="fola1">
         <input type="text" name="username" placeholder="username"><br>
         <input type="password" name="password" placeholder="password"><br>
-        <input type="submit">
+        <input type="submit" name="log in" placeholder="log in" id="one">
+        </div>
     </form>
     <div>
         {% for messages in messages %}
         <h3>{{messages}}</h3>
         {% endfor %}
-    </div>
+    </div> 
+   <h4><a href="#">forgot password</a></h4>
+    
 </body>
 </html>
