--- a/tinuke/static/css/gbogs.css
+++ b/tinuke/static/css/gbogs.css
@@ -1,20 +1,34 @@
 body{
-    background-color: red;
+    background-color: rgba(219, 76, 76, 0.722);
     color: #fff;
-    text-align: center;    
+    /*text-align: center;*/    
 }
-
+.homepage{
+    display: flex;
+    flex-wrap: wrap;
+}
 .boom{
-    width: 200px;
+    width: 100px;
     height: 200px;
 }
 
-li{
+ul{
     display: flex;
+    color: #fff;
+	margin: 10px;
+    padding: 20px;
+	list-style-type: none;
+    font-size: 15px;
+}
+li{
+    position: relative;
+    left: 1000px;
+    margin: 5px;
+    text-decoration: none;
     color: #fff;
 }
 .fola{
-    background-color: red;
+    background-color: rgba(74, 216, 213, 0.686);
     color: #fff;
 }
 .fola1{
@@ -24,17 +38,22 @@ li{
 input{
     position: relative;
     top: 100px;
-    height: 38px;
+    height: 45px;
     width: 280px;
     padding: 10px;
     margin: 7px;
-    border-radius: 10px;
+    border-radius: 25px;
     border: none;
 }
 #one{
     text-align: center;
+    background-color: red;
+}
+.forgot{
+    position: relative;
+    top: 250px;
 }
 .register{
-    background-color: red;
+    background-color: rgba(93, 195, 127, 0.644);
     color: #fff;
 }
