--- a/zikky/templates/login.html
+++ b/zikky/templates/login.html
@@ -21,7 +21,7 @@
         <h3>{{messages}}</h3>
         {% endfor %}
     </div> 
-   <h4><a href="#">forgot password</a></h4>
+   <h4><a href="#" class="forgot">forgot password?</a></h4>
     
 </body>
 </html>
