--- a/zikky/templates/register.html
+++ b/zikky/templates/register.html
@@ -17,7 +17,7 @@
         <input type="email" name="email" placeholder="Email"><br>
         <input type="password" name="password1" placeholder="Password"><br>
         <input type="password" name="password2" placeholder="Confirm Password"><br>
-        <input type="Submit">
+        <input type="Submit" id="one">
     </form>
     <div>
         {% for messages in messages %}
