--- a/tinuke/static/css/gbogs.css
+++ b/tinuke/static/css/gbogs.css
@@ -30,6 +30,7 @@ li{
 .fola{
     background-color: rgba(74, 216, 213, 0.686);
     color: #fff;
+    text-align: center;
 }
 .fola1{
     height: 20px;
@@ -56,4 +57,8 @@ input{
 .register{
     background-color: rgba(93, 195, 127, 0.644);
     color: #fff;
+    text-align: center;
+}
+.log{
+    color: aqua;
 }
