worked on contact

--- a/zikky/templates/homepage.html
+++ b/zikky/templates/homepage.html
@@ -16,7 +16,7 @@
         <h1 class="logo">Olacash Housing</h1>
     <ul>
         <li><a href="/">Homepage</a></li>
-        <li><a href="contact">Contact</a></li>
+        <li><a href="accounts/contact">Contact</a></li>
 
         {% if user.is_authenticated %}
         <li class="log">Hello, {{user.username}}</li>
