updating contact form

--- a/tinuke/static/css/gbogs.css
+++ b/tinuke/static/css/gbogs.css
@@ -41,7 +41,7 @@ li{
     height: 20px;
     border-radius: 15px;
 }
-input{
+.register1 > input{
     position: relative;
     top: 100px;
     height: 45px;
@@ -55,6 +55,16 @@ input{
     text-align: center;
     background-color: red;
 }
+.fola1 > input{
+    position: relative;
+    top: 100px;
+    height: 45px;
+    width: 280px;
+    padding: 10px;
+    margin: 7px;
+    border-radius: 25px;
+    border: none;
+}
 .forgot{
     position: relative;
     top: 250px;
@@ -66,4 +76,39 @@ input{
 }
 .log{
     color: aqua;
+}
+.contact{
+    background-color: rgba(142, 15, 15, 0.727);
+    text-align: center;
+}
+.text{
+    position: relative;
+    top: 170px;
+    right: 180px;
+    width: 550px;
+    height: 100px;
+}
+.sola{
+    display: flex;
+}
+.sola > input{
+    position: relative;
+    top: 100px;
+    height: 45px;
+    width: 270px;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 25px;
+    border: none;
+    left: 375px;
+}
+#show{
+    position: absolute;
+    top: 450px;
+    width: 560px;
+    left: 380px;
+}
+.contact1{
+    position: relative;
+    right: 500px;
 }
