--- a/zikky/templates/register.html
+++ b/zikky/templates/register.html
@@ -8,7 +8,7 @@
     <title>Registeration</title>
 </head>
 <body class="register">
-    <form action="register" method="post">
+    <form action="register" method="post" class='register1'>
         {% csrf_token %}
 
         <input type="text" name="first_name" placeholder="First Name"><br>
