--- a/zikky/templates/login.html
+++ b/zikky/templates/login.html
@@ -8,7 +8,7 @@
     <title>login</title>
 </head>
 <body class="fola">
-    <form action="login" method="post"> 
+    <form action="login" method="post" class="fola1"> 
         {% csrf_token %}
         <div class="fola1">
         <input type="text" name="username" placeholder="username"><br>
