--- a/zikky/templates/register.html
+++ b/zikky/templates/register.html
@@ -8,6 +8,9 @@
     <title>Registeration</title>
 </head>
 <body class="register">
+    <a href="/" class="contact1">
+        <h1 class="logo">Olacash Housing</h1>
+    </a>
     <form action="register" method="post" class='register1'>
         {% csrf_token %}
 
