--- a/zikky/templates/login.html
+++ b/zikky/templates/login.html
@@ -8,6 +8,9 @@
     <title>login</title>
 </head>
 <body class="fola">
+    <a href="/" class="contact1">
+        <h1 class="logo">Olacash Housing</h1>
+    </a>
     <form action="login" method="post" class="fola1"> 
         {% csrf_token %}
         <div class="fola1">
